[gd_scene load_steps=7 format=3 uid="uid://dmxk4wp0ls8go"]

[ext_resource type="Script" path="res://levels/level/Level.gd" id="1"]
[ext_resource type="FontFile" uid="uid://bpsefiotqlkol" path="res://fonts/ARCADECLASSIC.TTF" id="2"]
[ext_resource type="PackedScene" uid="uid://ca3lws27wtksg" path="res://ui/status_bar/StatusBar.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://ck8gu485r1kao" path="res://player/Player.tscn" id="4"]
[ext_resource type="Script" path="res://levels/level/background/Background.gd" id="6"]

[sub_resource type="FontFile" id="2"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
fallbacks = Array[Font]([ExtResource("2")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/9/0/ascent = 0.0
cache/0/9/0/descent = 0.0
cache/0/9/0/underline_position = 0.0
cache/0/9/0/underline_thickness = 0.0
cache/0/9/0/scale = 1.0
cache/0/9/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/9/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/10/0/ascent = 0.0
cache/0/10/0/descent = 0.0
cache/0/10/0/underline_position = 0.0
cache/0/10/0/underline_thickness = 0.0
cache/0/10/0/scale = 1.0
cache/0/10/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/10/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/11/0/ascent = 0.0
cache/0/11/0/descent = 0.0
cache/0/11/0/underline_position = 0.0
cache/0/11/0/underline_thickness = 0.0
cache/0/11/0/scale = 1.0
cache/0/11/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/11/0/kerning_overrides/12/0 = Vector2(0, 0)
cache/0/12/0/ascent = 0.0
cache/0/12/0/descent = 0.0
cache/0/12/0/underline_position = 0.0
cache/0/12/0/underline_thickness = 0.0
cache/0/12/0/scale = 1.0
cache/0/12/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/9/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/10/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/11/0 = Vector2(0, 0)
cache/0/12/0/kerning_overrides/12/0 = Vector2(0, 0)

[node name="Level" type="Node2D"]
script = ExtResource("1")

[node name="Background" type="Node2D" parent="."]
script = ExtResource("6")
player_node_path = NodePath("../Player")

[node name="Starfield" type="TileMap" parent="Background"]
z_index = -1
format = 2

[node name="Border" type="TileMap" parent="Background"]
z_index = -1
format = 2

[node name="Terrain" type="TileMap" parent="Background"]
z_index = -1
format = 2

[node name="Enemies" type="Node2D" parent="Background"]

[node name="Items" type="Node2D" parent="Background"]

[node name="Player" parent="." instance=ExtResource("4")]
position = Vector2(80, 125)

[node name="StatusBar" parent="." instance=ExtResource("3")]

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 160.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2

[node name="ReadyLabel" type="Label" parent="UI"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -15.0
offset_top = -6.0
offset_right = 15.0
offset_bottom = 6.0
theme_override_colors/font_color = Color(0.0588235, 0.219608, 0.0588235, 1)
theme_override_fonts/font = SubResource("2")
theme_override_font_sizes/font_size = 11
text = "READY"

[node name="ReadyTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
volume_db = 0.9
autoplay = true

[connection signal="timeout" from="ReadyTimer" to="." method="_on_ReadyTimer_timeout"]
